--- a/LoginItem Sample/LoginItem_Sample.entitlements
+++ b/LoginItem Sample/LoginItem_Sample.entitlements
@@ -8,6 +8,8 @@
 	<array>
 		<string>$(TeamIdentifierPrefix)group.com.parussoft.LoginItem-Sample.shared</string>
 	</array>
+	<key>com.apple.security.files.downloads.read-write</key>
+	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
 </dict>
